# purescript-test-task

./: LICENSE  README.md  Sample.hs  Task.tex  purescript-test-task.cabal
src/: Sample.hs
