name:                purescript-test-task
version:             0.1.0.0
synopsis:            Supplementary materials for IOHK test task
description:         Please see README.md
homepage:            https://github.com/githubuser/purescript-test-task#readme
license:             BSD3
license-file:        LICENSE
author:              Serokell
maintainer:          hi@serokell.io
copyright:           2016 IOHK Ltd.
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Sample
  build-depends:       base >= 4.7
                     , time
                     , text
                     , containers
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/input-output-hk/purescript-test-task
